--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Collaborative distributed version control lesson"
+title: "Collaborative distributed version control"
 start_time: 540  # 9:00
 
 # where things are
