--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+fork_me_ribbon_url: https://github.com/coderefinery/git-collaborative
 title: "Collaborative distributed version control"
 start_time: 540  # 9:00
 
