--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 fork_me_ribbon_url: https://github.com/coderefinery/git-collaborative
 title: "Collaborative distributed version control"
 start_time: 540  # 9:00
+centralized_workflow_exercise_url: https://github.com/coderefinery/centralized-workflow-exercise
+forking_workflow_exercise_url: https://github.com/coderefinery/forking-workflow-exercise
 
 # where things are
 source: .
